--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -75,8 +75,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Set up variables for GitHub Pages
         run: |
-          echo "NEXT_PUBLIC_USERNAME=${{ vars.NEXT_PUBLIC_USERNAME }}" >> $GITHUB_ENV
-          echo "NEXT_PUBLIC_PASSWORD=${{ vars.NEXT_PUBLIC_PASSWORD }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_USERNAME=${{ vars.USERNAME }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_PASSWORD=${{ vars.PASSWORD }}" >> $GITHUB_ENV
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
